# taskdaemon

./: .gitignore  .otto.yml  .taskdaemon-complete  Cargo.toml  PROMPT.md  README.md  WORKSPACE-STATUS.md  build.rs  coffee_brewing_guide.md  list_examples.md  plan.md  taskdaemon.yml
cs/: Cargo.toml  build.rs
cs/src/: cli.rs  config.rs  lib.rs  main.rs  store.rs
docs/: 2026-01-16-design-implementation-drift.md  2026-01-20-rlm-context-window-integration.md  config-schema.md  coordinator-design.md  domain-types.md  execution-model-design.md  implementation-details.md  loop-manager.md  taskdaemon-design.md  tools.md  tui-design.md
docs/design/: 2026-01-17-collapsed-tool-output.md  2026-01-17-conversation-module-extraction.md  2026-01-17-plan-command-rule-of-five.md  2026-01-18-tool-naming-alignment.md  2026-01-19-event-driven-work-pickup.md
docs/old/: AGENTS.md  awl-schema-design.md  taskdaemon-design.md
docs/specs/: 014-loop-manager.md  025-terminal-ui.md  028-project-setup.md  029-library-implementation.md  030-cli-implementation.md  031-build-installation.md  index.md
docs/stop-using-the-ralph-loop-plugin/: transcript.md
phases/: 001-pipeline-model.md  004-pipeline-monitoring.md  phases.jsonl
prompts/: plan-pass-1.pmt  plan-pass-2.pmt  plan-pass-3.pmt  plan-pass-4.pmt  plan-pass-5.pmt  plan-system.pmt  plan.pmt  title.pmt
specs/: 001-llm-client-trait.md  002-anthropic-client.md  003-loop-engine-core.md  004-system-captured-progress.md  005-tool-system.md  006-domain-types.md  007-state-manager-actor.md  008-crash-recovery.md  009-execution-tracking.md  010-coordinator-routing.md  011-priority-scheduler.md  012-main-watcher.md  013-rate-limiting.md  014-loop-manager.md  015-dependency-validation.md  016-polling-scheduler.md  017-config-system.md  018-loop-type-definitions.md  019-pipeline-config.md  020-template-rendering.md  021-hot-reload.md  022-loop-inheritance.md  023-analytics-metrics.md  024-worktree-management.md  025-terminal-ui.md  026-cli-commands.md  027-daemon-mode.md  028-project-setup.md  031-build-installation.md  032-testing-validation.md  index.md
src/: cli.rs  config.rs  daemon.rs  lib.rs  main.rs
src/coordinator/: config.rs  core.rs  handle.rs  mod.rs  persistence.rs
src/domain/: execution.rs  id.rs  mod.rs  plan.rs  priority.rs  record.rs  spec.rs
src/llm/: anthropic.rs  client.rs  error.rs  mod.rs  openai.rs  types.rs
src/loop/: cascade.rs  config.rs  engine.rs  manager.rs  metrics.rs  mod.rs  type_loader.rs  validation.rs
src/pipeline/: mod.rs
src/planning/: decomposer.rs  mod.rs  session.rs
src/progress/: mod.rs  strategy.rs  system_captured.rs
src/prompts/: embedded.rs  loader.rs  mod.rs
src/repl/: mod.rs  session.rs
src/scheduler/: config.rs  core.rs  mod.rs  queue.rs
src/state/: manager.rs  messages.rs  mod.rs  recovery.rs
src/tools/: context.rs  error.rs  executor.rs  mod.rs  traits.rs
src/tui/: app.rs  conversation_log.rs  events.rs  mod.rs  runner.rs  state.rs  tree.rs  (+1 more)
td/: Cargo.toml  PROMPT.md.old  plan.md
td/docs/: 2026-01-15-tui-and-missing-features.md  2026-01-21-iteration-artifact-storage.md  coordinator-design.md  execution-model-design.md  implementation-details.md  llm-client.md  loop-engine.md  loop-hierarchy.md  output-handling-analysis.md  plan-view-workflow.md  progress-strategy.md  rule-of-five.md  scheduler.md  taskdaemon-design.md  tui-design.md
td/docs/design/: 2026-01-17-conversation-module-extraction.md  2026-01-17-plan-command-rule-of-five.md  2026-01-21-cross-process-ipc.md  2026-01-21-event-bus-architecture.md  2026-01-22-optional-git-worktrees.md  2026-01-22-taskmanager-and-explore-agent.md
td/docs/old/: developer-guide.md  implementation-readiness-assessment.md  neuraphage-prior-art.md
td/docs/rlm-context-window/: summary.md  transcript.txt
td/docs/specs/: .gitkeep  002-anthropic-client.md  006-domain-types.md  007-state-manager-actor.md  019-pipeline-config.md  022-loop-inheritance.md  026-cli-commands.md  032-testing-validation.md
td/docs/stop-using-the-ralph-loop-plugin/: summary.md
td/phases/: 001-pipeline-model.md  002-pipeline-execution-engine.md  003-advanced-triggers.md  004-pipeline-monitoring.md  005-howdy-project-setup.md  006-howdy-library-print-greeting.md  007-howdy-cli-wireup.md  008-howdy-build-install.md  009-howdy-e2e-validation.md  010-template-engine-core.md  011-template-helpers.md  012-template-partials-caching.md  013-template-dev-tools.md  index.md  phases.jsonl
td/prompts/: title.pmt
td/src/: cli.rs  config.rs  lib.rs  main.rs
td/src/coordinator/: config.rs  messages.rs  mod.rs
td/src/domain/: execution.rs  iteration_log.rs  mod.rs  run.rs
td/src/events/: bus.rs  logger.rs  mod.rs  types.rs
td/src/ipc/: client.rs  listener.rs  messages.rs  mod.rs
td/src/llm/: anthropic.rs  openai.rs  types.rs
td/src/loop/: cascade.rs  config.rs  engine.rs  explore.rs  manager.rs  mod.rs  type_loader.rs  validation.rs
td/src/loop/builtin_types/: phase.yml  plan.yml  spec.yml
td/src/pipeline/: definition.rs  flow.rs  triggers.rs
td/src/progress/: strategy.rs
td/src/state/: manager.rs  messages.rs
td/src/tools/: context.rs  executor.rs  mod.rs
td/src/tools/builtin/: explore.rs  grep.rs  mod.rs  query.rs  read_only_bash.rs  share.rs  tree.rs
td/src/tui/: app.rs  events.rs  mod.rs  runner.rs  state.rs  tree.rs  views.rs
td/src/validation/: rule_of_five.rs
td/src/watcher/: mod.rs
td/tests/: integration_test.rs
tests/: integration_test.rs
ts/: Cargo.toml
ts/src/: store.rs
(+26 files in other folders)
