[workspace]
resolver = "2"
members = [
    "td",
    "ts",
    "cs",
]

[workspace.package]
version = "0.2.2"
edition = "2024"
authors = ["Scott A. Idler <scott.a.idler@gmail.com>"]
license = "MIT"

[workspace.dependencies]
# Shared dependencies - crates use via { workspace = true }
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
colored = "3.0"
crossterm = "0.29"
dirs = "6.0"
env_logger = "0.11"
eyre = "0.6"
fast_html2md = "0.0.55"
fs2 = "0.4"
futures = "0.3"
glob = "0.3"
grep-matcher = "0.1"
grep-regex = "0.1"
grep-searcher = "0.1"
regex = "1.10"
handlebars = "6.4"
log = "0.4"
nix = { version = "0.30", features = ["signal"] }
rand = "0.9"
ratatui = "0.30"
reqwest = { version = "0.12", features = ["json", "stream"] }
reqwest-eventsource = "0.6"
rusqlite = { version = "0.38", features = ["bundled"] }
rustyline = "17.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
tempfile = "3.24"
thiserror = "2.0"

# Dev/test dependencies (from scaffold)
assert_cmd = "2.0"
criterion = "0.6"
predicates = "3.1"
proptest = "1.7"
serial_test = "3.2"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tui-markdown = "0.3"
uuid = { version = "1.19", features = ["serde", "v7"] }
walkdir = "2.5"

# Internal crates
taskstore = { path = "ts" }
contextstore = { path = "cs" }
