[package]
name = "taskdaemon"
version = "0.2.4"
edition.workspace = true
authors.workspace = true
license.workspace = true
build = "build.rs"
description = "Extensible Ralph Wiggum Loop Orchestrator"

[lib]
name = "taskdaemon"
path = "src/lib.rs"

[[bin]]
name = "td"
path = "src/main.rs"

[dependencies]
taskstore = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }
colored = { workspace = true }
crossterm = { workspace = true }
dirs = { workspace = true }
env_logger = { workspace = true }
eyre = { workspace = true }
fast_html2md = { workspace = true }
futures = { workspace = true }
glob = { workspace = true }
grep-matcher = { workspace = true }
grep-regex = { workspace = true }
grep-searcher = { workspace = true }
handlebars = { workspace = true }
log = { workspace = true }
nix = { workspace = true }
rand = { workspace = true }
ratatui = { workspace = true }
reqwest = { workspace = true }
reqwest-eventsource = { workspace = true }
rustyline = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tui-markdown = { workspace = true }
uuid = { workspace = true }
walkdir = { workspace = true }

[build-dependencies]

[dev-dependencies]
assert_cmd = { workspace = true }
criterion = { workspace = true }
predicates = { workspace = true }
proptest = { workspace = true }
serial_test = { workspace = true }
tempfile = { workspace = true }
