[package]
name = "taskstore"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
build = "build.rs"
description = "Generic persistent state management with SQLite+JSONL+Git integration"

[lib]
name = "taskstore"
path = "src/lib.rs"

[[bin]]
name = "taskstore"
path = "src/main.rs"

[dependencies]
chrono = { workspace = true }
clap = { workspace = true }
colored = { workspace = true }
dirs = { workspace = true }
env_logger = { workspace = true }
eyre = { workspace = true }
fs2 = { workspace = true }
log = { workspace = true }
rusqlite = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }

[build-dependencies]

[dev-dependencies]
assert_cmd = { workspace = true }
criterion = { workspace = true }
predicates = { workspace = true }
proptest = { workspace = true }
serial_test = { workspace = true }
tempfile = { workspace = true }

# Examples are auto-discovered from examples/ directory
# Run one: cargo run --example 01_basic_crud
# Run all: otto examples
